--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "e2e": "ng e2e",
     "keys:create": "cat ./src/environments/keys.template.ts > ./src/environments/keys.ts",
     "keys:inject": "echo $KEYS > ./src/environments/keys.ts",
-    "firebase:deploy": "firebase deploy"
+    "firebase:deploy": "firebase deploy -P women-day"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +22,9 @@
     "@angular/forms": "~8.1.2",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
+    "@angular/pwa": "^0.803.8",
     "@angular/router": "~8.1.2",
+    "@angular/service-worker": "~8.1.2",
     "@zxing/ngx-scanner": "^2.0.1",
     "angularx-qrcode": "^1.6.4",
     "firebase": "^6.3.4",
